@@ -1,5 +1,5 @@
 #!../../src/xotclsh
-# $Id: Counter4.xotcl,v 1.1 2004/05/23 22:50:39 neumann Exp $
+# $Id: Counter4.xotcl,v 1.2 2004/07/27 21:39:46 neumann Exp $
 array set opts {-pkgdir .}; array set opts $argv
 lappend auto_path $opts(-pkgdir)
 
@@ -16,7 +16,7 @@ Counter instproc increment {} {        ;### counter method
   my incr count
 }
 
-### Definiere a Counter subclass for persistent counting
+### Define a Counter subclass for persistent counting
 Class PersistentCounter -superclass Counter
 PersistentCounter instproc init args { ;### Constructor
   next                                 ;### call superclasses' init
@@ -30,7 +30,7 @@ PersistentCounter c1
 PersistentCounter c2
 
 
-### Definiere a proxy class, that handles HTML decoration
+### Define a proxy class, that handles HTML decoration
 ### HtmlProxy forwards all unknown calls to "realSubject"
 Class HtmlProxyCounter -superclass HtmlProxy
 HtmlProxyCounter instproc init args {    ;### Constructor
